public/main.css
@import url("https://fonts.googleapis.com/css?family=Lato:400,700&display=swap");

:root {
    --folding-header-bgColor: #242e42;
    --folding-header-bgColor-hover: #1d2636;
    --folding-header-txtColor: #dde9f8;
    --folding-header-headingColor: #7889a4;
    --folding-header-width: 160px;
    --folding-content-bgColor: #f0f1f6;
    --folding-content-txtColor: #171616;
    --folding-content-blockColor: #fff;
    --white: #fff;
    --black: #333;
    --blue: #00b9eb;
    --red: #ec1848;
    --border-radius: 4px;
    --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font: 16px/1.5 "Lato", sans-serif;
    position: relative;
}

ul {
    list-style: none;
}

svg {
    display: block;
}

a, 
button {
    color: inherit;
}

button, 
input {
    border:none;
}

a {
    text-decoration: none;
}

button { 
    background: none;
    cursor: pointer;
}

input {
    -webkit-appearance: none;
}


/*==== folding header ====*/
.folding-header {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: var(--folding-header-width);
    color: var(--folding-header-txtColor);
    background: var(--folding-header-bgColor);
}

.folding-header nav {
    display: flex;
    flex-direction: column;
    min-width: 100%;
    min-height: 100%;
}

.folding-header .logo {
    display: block;
    max-width: 120px;
    margin: 20px 20px 0px;
}

.folding-header .toggle-mob-menu {
    display: none;
    margin-left: 5px;
    padding: 4px;
    background: var(--folding-header-bgColor);
    border-radius: var(--border-radius);
}

.folding-header .toggle-mob-menu svg,
.folding-header .toggle-mob-menu button img {
    fill: var(--folding-header-bgColor);
    transition: transform 0.2s;
}

.folding-header .employee-menu {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    margin-top: 5px;
}

.folding-header .employee-menu li:last-child {
    margin-top: auto;
    margin-bottom: 30px;
  }

.folding-header .employee-menu .menu-heading h3 {
    text-transform: uppercase;
    letter-spacing: 0.15em;
    font-size: 12px;
    margin-top: 0px;
    color: var(--folding-header-headingColor);
}

.folding-header .employee-menu svg,
.folding-header .employee-menu img {
    width: 35px;
    height: 35px;
    fill: var(--folding-header-txtColor);
    margin-right: 10px;
    transition: fill 0.2s;
}

.folding-header .employee-menu a,
.folding-header .employee-menu button {
  display: flex;
  align-items: center;
  font-size: 0.9rem;
  transition: background 0.2s, color 0.2s;
}

.folding-header .employee-menu a:hover,
.folding-header .employee-menu a:focus,
.folding-header .employee-menu button:hover,
.folding-header .employee-menu button:focus {
  background: var(--folding-header-bgColor-hover);
  color: var(--blue);
  outline: none;
}

.folding-header .employee-menu a:hover svg,
.folding-header .employee-menu a:focus svg,
.folding-header .employee-menu button:hover svg,
.folding-header .employee-menu button:focus svg {
  fill: var(--blue);
}

.folding-header .employee-menu li > * {
    width: 100%;
    padding: 12px 15px;
}

/* page */
.page-content {
    position: relative;
    left: var(--folding-header-width);
    width: calc(100% - var(--folding-header-width));
    min-height: 100vh;
    padding: 30px;
    color: var(--folding-content-txtColor);
    background: var(--folding-content-bgColor);
  }

.page-content .sort {
    position: absolute;
    display: block;
    padding:2px;
    width:50px;
    margin-right: 0px;
    right: 20px;
    top: 40px;
}

.page-content .sort .sort-btn img {
    width: 30px;
    height: auto;
}

.page-content .sort .sort-btn {
    text-align: center;
    justify-content: center;
}
.page-content .content-grid {
    position: relative;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: 500px;
    grid-gap: 30px;
}

.page-content .content-grid > article:first-child,
.page-content .content-grid > article:last-child {
    grid-column: 0 / -1;
}

.page-content .content-grid article:hover .article-photo-header {
    -webkit-filter: blur(2px) brightness(50%);
    filter: blur(2px) brightness(50%); 
}

.page-content .content-grid article:hover .text-overlay {
    display: inline;
}

.page-content .content-grid article {
    position: relative;
    display: inline-block;
    overflow: hidden;
    width: 100%;
    border-radius: 10px;
    min-width: 700.5px;
}

.page-content .content-grid article .article-photo-header {
    -webkit-filter: none;
    filter: none;
    display: block;
    position: absolute;
    min-height: 500px;
    min-width: inherit;
    width: 100%;
    height: auto;
    overflow: hidden;
}

.page-content .content-grid article .text-overlay {
    display: none;
}

.page-content .content-grid article .text-overlay h4 {
    position: absolute;
    top: 50%;
    left: 51%;
    padding-bottom: 3px;
    margin-bottom: 3px;
    line-height: 1.5;
    width: 100%;
    transform: translate(-50%, -50%);
}

.page-content .content-grid article .text-overlay h5 {
    position: absolute;
    top: 60%;
    left: 51%;
    line-height: 36px;
    width: 100%;
    transform: translate(-50%, -50%);
}

.page-content .content-grid article h4 {
    display: inline-block;
    position: absolute;
    font-size: 40px;
    color: white;
}

.page-content .content-grid article .article-badge-button {
    width: 28px;
    height: 28px;
    bottom: 10px;
    left: 94%;
    position: absolute;
}


.page-content .content-grid article .article-badge-button svg {
    max-width: 50px;
    height: auto;
    max-height: 50px;
    fill: #ff781f;
}

.page-content .content-grid article h5 {
    display: inline-block;
    position: absolute;
    font-size: 20px;
    color: white;
}

/*==== search bar ====*/
.search {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-column-gap: 50px;
    align-items: center;
    background: var(--folding-content-bgColor);
    margin-bottom: 30px;
}

.search form {
    position: relative;
    width: 100%;
}

.search input[type="search"] {
    width: 100%;
    height: 50px;
    font-size: 1.5rem;
    padding-left: 15px;
    background: var(--folding-content-blockColor);
    color: var(--black);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow);
}

.search ::placeholder {
    color: var(--folding-content-txtColor);
}

.search form svg {
    width: 26px;
    height: 26px;
    fill: var(--page-content-txtColor);
}


.search form button {
    position: absolute;
    top: 50%;
    right: 15px;
    transform: translateY(-50%);
}

@media screen and (min-width: 768px) {
    .collapsed .folding-header {
      width: 40px;
    }
   
    .collapsed .folding-header .employee-menu li > * {
      padding: 10px;
    }
   
    .collapsed .logo {
        transform: scale(.6, .6);
        margin: 5px;
        height: 35px;
    }

    .collapsed .folding-header .employee-menu span,
    .collapsed .folding-header .employee-menu .menu-heading {
      display: none;
    }
   
    .collapsed .folding-header .employee-menu svg,
    .collapsed .folding-header .employee-menu img {
      margin-right: 0px;
      height: 20px;
      width: 20px;
    }
   
    .collapsed .folding-header .collapse-btn svg {
      transform: rotate(180deg);
    }
   
    .collapsed .page-content {
      left: 40px;
      width: calc(100% - 40px);
    }
}

/* Change to one column grid to prevent horizontal scrolling*/
@media screen and (max-width: 1639px) {
    .page-content .content-grid {
        position: relative;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-auto-rows: 200px;
        grid-gap: 5px;
        max-width: 100%;
        width: 100%;
    }

    .page-content .content-grid article .article-badge-button {
        bottom: 10px;
    }
}

/* Small view */
@media screen and (max-width: 767px) {
    .folding-header {
      padding-top: 10px;
      position: static;
      width: 100%;
      height: 65px;
    }

    .folding-header svg {
        fill: var(--folding-header-bgColor);
        width: 100%;
        height: 100%;
    }
   
    .folding-header nav {
      flex-direction: row;
      height: 50px;
      min-width: 100%;
      width: 100%;
      max-width: 767px;
    }
   
    .folding-header .toggle-mob-menu {
      display: block;
    }

    .folding-header .logo {
        margin:1px;
        height:50px;
    }
   
    .folding-header .employee-menu {
      position: absolute;
      left: 30px;
      top: 40px;
      margin-top: 0;
      z-index: 2;
      border-radius: var(--border-radius);
      background: var(--folding-header-bgColor);
      visibility: hidden;
      opacity: 0;
      transform: scale(0.95);
      transition: all 0.2s;
    }

    .page-content .sort {
        position: absolute;
        display: block;
        padding:2px;
        width: 50px;
        margin-right: 0px;
        right: 20px;
        top: 2px;
        z-index: 9999;
    }

    .page-content .sort .sort-btn img {
        width: 30px;
        height: auto;
    }

    .page-content .sort .sort-btn {
        text-align: center;
        justify-content: center;
    }
     
    /* hide the collapse button and the search*/
    .folding-header .employee-menu li:last-child,
    .search {
      display: none;
    }
   
    .search {
      position: absolute;
      left: 131px;
      top: 10px;
      padding: 0;
      grid-column-gap: 5px;
      width: 100%;
      border-radius: var(--border-radius);
      background: transparent;
    }

    .search input[type="search"] {
        font-size: 1rem;
        height: 35px;
    }

    .search form svg {
        width: 18px;
        height: 18px;
    }

    .page-content {
        position: relative;
        left: 0;
        width: 100%;
        max-width: 100%;
        min-height: 100vh; 
        padding: 5px;
        color: var(--folding-content-txtColor);
        background: var(--folding-content-bgColor);
      }
    
    .page-content .content-grid {
        position: relative;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-auto-rows: 200px;
        grid-gap: 5px;
        max-width: 100%;
        width: 100%;
    }
    
    .page-content .content-grid article {
        max-width: 767px;
        min-width: 100%;
    }

    .page-content .content-grid article .article-photo-header {
        min-height: 0;
        min-width: 100%;
        height: auto;
    }
    
    .page-content .content-grid article .article-badge-button {
        width: 28px;
        height: 28px;
        top: 83%;
        left: 90%;
        position: absolute;
    }

    .page-content .content-grid article .text-overlay h4 {
        position: absolute;
        font-size: 15px;
        top: 50%;
        padding-bottom: 2px;
        left: 51%;
        width: 100%;
        transform: translate(-50%, -50%);
    }
    
    .page-content .content-grid article .text-overlay h5 {
        position: absolute;
        font-size: 7px;
        top: 61%;
        left: 51%;
        width: 100%;
        transform: translate(-50%, -50%);
    }
}

.folding-header .employee-menu {
    transition: all 0.2s;
}

.mob-menu-opened .toggle-mob-menu img {
    transform: rotate(180deg);
    background-color: var(--folding-header-bgColor-hover);
}

.mob-menu-opened .folding-header .employee-menu {
    transform: scale(1);
    visibility: visible;
    opacity: 1;
}

